# dotfiles

./: .gitignore  .prettierignore  .vercelignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  bootstrap  deps.toml  dot_tmux.conf  dot_xinitrc  dot_zshrc  dotfiles.toml  dotman.bootstrap.yaml  dotman.yaml  vercel.json
.config/: init.lua  lazy-lock.json
.config/fish/: config.fish
.config/nvim/: lazy-lock.json
.github/workflows/: ci.yml  release-artifacts.yml  release-dotman.yml
config/: markdownlint-cli2.yaml  starship.toml  tmux.conf
config/atuin/: config.toml
config/btop/: btop.conf
config/fastfetch/: config.jsonc
config/fish/: config.fish  fish_plugins
config/ghostty/: config
config/herdr/: config.toml
config/lazygit/: config.yml
config/mise/: config.toml
config/nvim/: init.lua  lazy-lock.json  lazyvim.json
config/pi/: plugins.json  web-search.json
config/pi-lens/: config.json
config/tealdeer/: config.toml
config/yazi/: yazi.toml
docs/: dotman-lite.md  manifest-schema.md  new-machine.md  platform-support.md  recovery.md  release-checklist.md  release-policy.md  roadmap.md  trust-boundaries.md
dot_config/alacritty/: alacritty.yml
dot_zsh/: alias.zsh  env.zsh
scripts/: build-site.sh  e2e-image.dockerfile  e2e-linux.sh  install  install.sh  smoke-test.sh  update-homebrew-formula.sh
site/: .gitignore  AGENTS.md  index.html  package-lock.json  package.json
site/wasm/: Cargo.toml
site/wasm/src/: lib.rs
src/: add.rs  agent.rs  archive.rs  bootstrap.rs  check.rs  cli.rs  config.rs  deploy.rs  deps.rs  diff.rs  doctor.rs  execute.rs  headless.rs  http.rs  icons.rs  init.rs  installers.rs  lib.rs  link.rs  main.rs  model.rs  output.rs  package_managers.rs  path.rs  plan.rs  platform.rs  process.rs  profile.rs  recovery.rs  self_update.rs  shell.rs  status.rs  store.rs  theme.rs  tui.rs  update.rs
src/ops/: mod.rs  (+6 more)
tests/: cli.rs  cli_add.rs  cli_agent.rs  cli_check.rs  cli_deploy.rs  cli_doctor.rs  cli_link.rs  cli_shell.rs  install-script.sh  install_script.rs  integration.rs  nvim_check.lua  nvim_session_check.lua  pi-permissions.sh  pi-plugin-stack.sh  tui_pty.rs
(+269 files in other folders)
