[package]
name = "dotman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
toml = "0.8"
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tiny_http = "0.12"
