[package]
name = "dotman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
tempfile = "3.10"
