[package]
name = "dotman"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
thiserror = "2"
ulid = "1.1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sha2 = "0.10"
toml = "0.8"
libc = "0.2.186"
unicode-width = "0.2"
flate2 = "1"
semver = "1"
tar = "0.4"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3.10"
insta = "1"
predicates = "3"
assert_cmd = "2"
