[package]
name = "dotman-web-state"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ratatui = { version = "0.29", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
